# benchmarks

./: .gitignore  README.md  RESULTS.md  auth-schema.sql  docker-compose.yml  schema.sql
bench/: audit-auth.js  audit.js  run-audit-auth.sh  run-audit.sh  run-meter.sh  run-stream.sh  seed-meter.sql  sse-client.go
go/audit/: go.mod  main.go  queries.sql  sqlc.yaml
go/audit-auth/: go.mod  main.go
go/audit-gorm/: go.mod  go.sum  main.go
go/meter/: go.mod  main.go
go/meter-gorm/: go.mod  main.go
go/stream/: go.mod  main.go
go/stream-gin/: go.mod  main.go
results/: go-aa-tight-1-3704.json  go-aa-tight-1-3704.k6.txt  go-aa-tight-1-3704.rss  go-aa-tight-1-3704.summary  go-aa-tight-1-5771.json  go-aa-tight-1-5771.k6.txt  go-aa-tight-1-5771.rss  go-aa-tight-1-5771.summary  go-aa-tight-1-9559.json  go-aa-tight-1-9559.k6.txt  go-aa-tight-1-9559.rss  go-aa-tight-1-9559.summary  go-aa-tight-2-12275.json  go-aa-tight-2-12275.k6.txt  go-aa-tight-2-12275.rss  go-aa-tight-2-12275.summary  go-aa-tight-2-7226.json  go-aa-tight-2-7226.rss  go-audit-124-repro.json  go-audit-124-repro.k6.txt  go-audit-124-repro.rss  go-audit-124-repro.summary  go-audit-126.json  go-audit-126.k6.txt  go-audit-126.rss  go-audit-126.summary  go-audit-auth-124-repro.json  go-audit-auth-124-repro.k6.txt  go-audit-auth-124-repro.rss  go-audit-auth-124-repro.summary  go-audit-auth-126.json  go-audit-auth-126.k6.txt  go-audit-auth-126.rss  go-audit-auth-126.summary  go-audit-auth-gtgc.json  go-audit-auth-gtgc.k6.txt  go-audit-auth-gtgc.rss  go-audit-auth-gtgc.summary  go-audit-auth.json  go-audit-auth.k6.txt  (+91 more)
rust/audit/: Cargo.toml
rust/audit-auth/: Cargo.toml
rust/audit-auth/src/: main.rs
rust/audit/src/: main.rs
rust/meter/: Cargo.toml
rust/meter/src/: main.rs
rust/stream/: Cargo.toml
rust/stream/src/: main.rs
ts/audit-auth-bunsql/: package.json
ts/audit-bunsql/: package.json
ts/audit-drizzle-bunsql/: package.json
(+18 files in other folders)
