[package]
name = "bench-meter"
version = "0.1.0"
edition = "2021"

[dependencies]
tokio = { version = "1", features = ["full"] }
sqlx = { version = "0.8", default-features = false, features = [
  "runtime-tokio-rustls",
  "postgres",
  "uuid",
  "chrono",
] }
uuid = { version = "1", features = ["v4", "serde"] }
chrono = "0.4"

[profile.release]
opt-level = 3
lto = "thin"
codegen-units = 1
