[package]
name = "bench-stream"
version = "0.1.0"
edition = "2021"

[dependencies]
axum = "0.7"
tokio = { version = "1", features = ["full"] }
tokio-stream = { version = "0.1", features = ["sync"] }
futures = "0.3"
async-stream = "0.3"

[profile.release]
opt-level = 3
lto = "thin"
codegen-units = 1
